# subagent_manager

./: .gitignore  HANDOFF.md  README.md  pyproject.toml  task.md  trace_example.md  walkthrough.md
bench/: .gitignore  HANDOFF.md  __init__.py  swe_bench_agents.py  swe_bench_harness.py  swe_bench_prompts.py  swe_bench_tools.py
bench/eval/: compare.py
bench/results/: dryrun_predictions.jsonl  dryrun_predictions.results.json  smoke_multi.jsonl  smoke_multi.results.json  smoke_v3.results.json  smoke_v4.jsonl  smoke_v4.results.json  smoke_v5.results.json  test_predictions.results.json  test_predictions_v2.results.json
examples/: basic_usage.py  code_review.py  diagnose.py  live_test.py  ollama_edge.py  web_research.py
gui/backend/: __init__.py  db.py  requirements.txt  run_manager.py  runs.db  server.py
gui/frontend/: index.html  package-lock.json  package.json
gui/frontend/src/: App.jsx  index.css
gui/frontend/src/components/: AgentPanel.jsx  CommandCenter.jsx  ConfigPanel.jsx  ContextViewer.jsx  DagEdge.jsx  DagNode.jsx  DagView.jsx  GoalInput.jsx  RunHistory.jsx  StatusBar.jsx  SynthesisView.jsx  ToolCallLog.jsx
gui/frontend/src/hooks/: useWebSocket.js
gui/frontend/src/stores/: useStore.js
gui/frontend/src/utils/: dagLayout.js
src/subagent_manager/: __init__.py  events.py  llm_client.py  logging_config.py  manager.py  subagent.py
src/subagent_manager/prompts/: __init__.py  orchestrator.py  subagent.py
src/subagent_manager/strategies/: __init__.py  adaptive.py  base.py  parallel.py  sequential.py
src/subagent_manager/tools/: __init__.py  base.py  file_reader.py  python_exec.py  url_reader.py  web_search.py
tests/: test_llm_client.py  test_manager.py  test_strategies.py  test_subagent.py  test_tools.py
